--- a/cow.html
+++ b/cow.html
@@ -249,14 +249,20 @@ padding: 25px;
    <body>
     <main role="main" class="container">
       <div class="section">
-           <img
-              src="./resource/whosline.png"
-              alt="portfolio line"
-              width="100%"
+         <div class="row">
+            <img
+              src="./resource/cow3_thmb.jpgg" width="100%"
                  />
-        <div class="row">
+           <img
+              src="./resource/cowtemp1.jpg" width="100%"
+                 />
+           <img
+              src="./resource/cow1.jpg" width="100%"
+                 />
+           
+       
           <img
-            src="./resource/wdpage.jpg"
+            src="./resource/cowtemp2.jpg"
             width="100%"
           />
         </div></div>
