--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ padding: 25px;
                
               <a href="./tictactoe.html" style="text-decoration: none">
                 <img
-                  src="./resource/cow2_thmb.jpg"
+                  src="./resource/tic_thmb.jpg"
                   width="100%"
                   alt="tictactoe"
               /></a>
