--- a/cow.html
+++ b/cow.html
@@ -251,7 +251,7 @@ padding: 25px;
       <div class="section">
          <div class="row">
             <img
-              src="./resource/cow3_thmb.jpgg" width="100%"
+              src="./resource/cow3_thmb.jpg" width="100%"
                  />
            <img
               src="./resource/cowtemp1.jpg" width="100%"
