--- a/tictactoe.html
+++ b/tictactoe.html
@@ -265,6 +265,10 @@ padding: 25px;
           <img
               src="./resource/tic22.gif" width="200%"
                  />
+           <img
+              src="./resource/tic31.jpg" width="200%"
+                 />
+          
           <img
               src="./resource/tic3.jpg" width="100%"
                  />
