--- a/cow.html
+++ b/cow.html
@@ -254,7 +254,7 @@ padding: 25px;
               src="./resource/cow3_thmb.jpg" width="100%"
                  />
            <img
-              src="./resource/cowtemp1.jpg" width="100%"
+              src="./resource/cowtemp1-1.jpg" width="100%"
                  />
            <img
               src="./resource/cow1.jpg" width="100%"
