--- a/whosdown.html
+++ b/whosdown.html
@@ -229,7 +229,7 @@ padding: 25px;
 
           <li>
             <a
-              href="https://drive.google.com/file/d/1JRe3St_4TmbKt9WZSyisquxhgZIjVdQn/view?usp=sharing"
+              href="https://drive.google.com/file/d/1nNxmMHo0IHKJ8pmnXLFTEwDHy9NKbklq/view?usp=share_link"
               style="text-decoration: none"
               ><ul>RESUME</ul></a
             >
@@ -285,7 +285,7 @@ padding: 25px;
                   alt="mail"
                     /></a> soin.an@sjsu.edu</p>
               
-               <p>   <a href="https://drive.google.com/file/d/1JRe3St_4TmbKt9WZSyisquxhgZIjVdQn/view?usp=sharing">
+               <p>   <a href="https://drive.google.com/file/d/1nNxmMHo0IHKJ8pmnXLFTEwDHy9NKbklq/view?usp=share_link">
            <img src="./resource/resume.png"
                   width="10%"
                   alt="resume"
