--- a/whosdown.html
+++ b/whosdown.html
@@ -250,10 +250,20 @@ padding: 25px;
     <main role="main" class="container">
       <div class="section">
         <div class="row">
-        
-        
+         <img
+            src="./resource/whos2_thmb.jpg"
+            width="100%"
+          />
+          <img
+            src="./resource/whos1.jpg"
+            width="100%"
+          />
           <img
             src="./resource/wdpage.jpg"
+            width="100%"
+          />
+            <img
+            src="./resource/whos2.jpg"
             width="100%"
           />
         </div></div>
